[workspace]
[package]
name = "gnostr-bitcoin"
version = "1910.922229.829806"
edition = "2024"
repository = "https://github.com/gnostr-org/gnostr-bitcoin.git"
description = "gnostr: a git+nostr workflow utility."
homepage = "https://github.com/gnostr-org/gnostr-bitcoin"
authors = ["gnostr admin@gnostr.org"]
default-run = "gnostr-bitcoin"

[package.metadata.wix]
upgrade-guid = "ACDBED36-EF11-48AF-9C23-1CD76EC60D69"
path-guid = "F8A0CC6D-BA1A-4B65-BF01-86C1FD861252"
license = false
eula = false

[lib]
name = "gnostr_bitcoin"
path = "src/lib.rs"

[[bin]]
name = "gnostr-bitcoin"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"

#anyhow = "1.0.98"
arti-client = { version = "0.30", features = ["native-tls", "onion-service-client"] }
bitcoin = { version = "0.32.5", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive", "env", "cargo"] }
crossterm = "0.27"
#crossterm = "0.27.0"
#crossterm = "0.28.1"
ctrlc = { version = "3.4.4", features = ["termination"] }
data-encoding = "2.9.0"
directories = "5.0.1"
dirs = "5.0.0"
futures = "0.3.31"
hex = "0.4"
image = "0.25.6"
log = "0.4.21"
portable-pty = "0.8"
rand = "0.9.1"
ratatui = "0.29.0"
#ratatui = "0.26.1"

ratatui-image = "8.0.2"
#ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
sha3 = "0.10.8"
simplelog = "0.12.2"
soft_ratatui = "0.1.2"
time = { version = "0.3", features = ["macros", "formatting"] }
tokio = { version = "1", features = ["full"] }
#tokio = { version = "1", features = ["full"] }
tor-rtcompat = { version = "0.30", features = ["tokio"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# We pin unicode-width to the specific version ratatui-image requires
unicode-width = "=0.2.0"
# We use the version of vt100 that is compatible with that pin
vt100 = "0.15.0"

[patch.crates-io]
unicode-width = { git = "https://github.com/unicode-rs/unicode-width", tag = "v0.2.0" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
