[package]
name = "gnostr-chat"
version.workspace = true
edition = "2021"
description = "gnostr chat transport crate"
authors = [
  "gnostr <admin@gnostr.org>",
  "0xtr <oxtrr@protonmail.com>",
  "TODO <add_more@gnostr.org>",
]
license = "MIT"
repository = "https://github.com/gnostr-org/gnostr.git"
exclude.workspace = true

[lib]
name = "gnostr_chat"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
gnostr-asyncgit = { path = "../asyncgit", package = "gnostr-asyncgit", version = "1876.947089.686958", default-features = false }
gnostr-p2p = { path = "../p2p", package = "gnostr-p2p", version = "1876.947089.686958" }
git2 = "0.20.2"
hostname = "0.3.1"
libp2p = { version = "0.54.1", features = ["full", "autonat", "cbor", "dcutr", "dns", "ecdsa", "ed25519", "floodsub", "gossipsub", "identify", "json", "kad", "macros", "mdns", "memory-connection-limits", "metrics", "noise", "ping", "plaintext", "pnet", "quic", "relay", "rendezvous", "request-response", "rsa", "secp256k1", "serde", "tcp", "tls", "tokio", "uds", "upnp", "wasm-bindgen", "websocket", "webtransport-websys", "yamux"] }
once_cell = "1.21.3"
parking_lot = "0.12.3"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
terminal_size = "0.4.3"
textwrap = "0.16.0"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.44"
ureq = { version = "2.12.1", features = ["json", "charset"] }
