[package]
name = "gnostr-crawler"
version = "0.0.3"
edition = "2021"
description = "gnostr:a git+nostr workflow utility"
authors = ["gnostr <admin@gnostr.org>", "optout21"]
readme = "README.md"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr"
license = "MIT"
keywords = ["gnostr", "tool", "nostr"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
env_logger = "0.10"
futures = "0.3.25"
git2 = "^0.18"
log = "0.4.24"
nostr-sdk = "0.19.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
time = "0.1.39"
tracing = { version = "0.1.38", default-features = false }
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.26.0", features = ["full"] }
