[package]
name = "gnostr-crawler"
version = "0.0.11"
edition = "2021"
description = "gnostr:a git+nostr workflow utility"
authors = ["gnostr <admin@gnostr.org>", "optout21"]
readme = "README.md"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr"
license = "MIT"
keywords = ["gnostr", "tool", "nostr"]
categories = ["command-line-utilities"]

[[bin]]
name = "gnostr-unified"
path = "src/bin/gnostr-unified.rs"

[dependencies]
assert_cmd = "2.0.17"
chrono = "0.4.41"
clap = { version = "4.4.13", features = ["derive"] }
console = "0.11.2"
ctrlc = "3.4.7"
dns-lookup = "2.0.4"
env_logger = "0.11"
#tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3.25"
git2 = "^0.18"
##use ../Cargo.toml version for ngit
indicatif = "0.14.0"
log = "0.4.24"
nostr-sdk = "0.19.1"
predicates = "3.1.3"
rand = "0.7.3"
regex = "1.11.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
time = "0.1.39"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
