[package]
edition = "2021"
name = "gnostr-crawler"
version = "1906.925289.572444"
authors = [
    "gnostr <admin@gnostr.org>",
    "optout21",
]
build = false
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "gnostr:a git+nostr workflow utility"
homepage = "https://github.com/gnostr-org/gnostr"
readme = "README.md"
keywords = [
    "gnostr",
    "tool",
    "nostr",
]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/gnostr-org/gnostr"

[lib]
name = "gnostr_crawler"
path = "src/lib.rs"

[[example]]
name = "gnostr_crawler"
path = "examples/gnostr_crawler.rs"

[[example]]
name = "gnostr_test"
path = "examples/gnostr_test.rs"

[[example]]
name = "string_pop"
path = "examples/string_pop.rs"

[dependencies]
anyhow = "1.0.100"
assert_cmd = "2.0.17"
axum = "0.7"
chrono = "0.4.41"
clap = { version = "4.4.13", features = ["derive"] }
console = "0.11.2"
ctrlc = "3.4.7"
directories = "6.0.0"
dns-lookup = "2.0.4"
env_logger = "0.11"
futures = "0.3.25"
git2 = "0.20.1"
indicatif = "0.14.0"
log = "0.4.24"
nostr-sdk = { version = "0.19.1", features = ["all-nips"] }
predicates = "3.1.3"
rand = "0.7.3"
regex = "1.11.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = "1.0.152"
serde_json = "1"
serde_yaml = "0.9"
time = "0.1.39"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.0"

[build-dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
url = "2.5.0"
sha2 = "0.10"
pulldown-cmark = "0.10"
