[package]
name = "gnostr-filetreelist"
version = "1906.925289.572444"
authors = ["gnostr <admin@gnostr.org>", "extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "filetree abstraction based on a sorted path list, supports key based navigation events, folding, scrolling and more"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["gui", "cli", "terminal", "ui", "tui"]

[lib]
name = "gnostr_filetreelist"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
