[package]
name = "gh-rs"
version = "1894.934224.276199"
edition = "2021"

[lib]
name = "gh_rs"
path = "src/lib.rs"

[dependencies]
anstream = "0.6.4"
async-std = "1.12.0"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
] }
clap = { version = "4.5.20", features = ["derive", "env", "cargo"] }
configparser = { version = "3.0.2", features = ["async-std", "indexmap"] }
git2 = "0.20.1"
home = "0.5.5"
octocrab = "0.32.0"
openssl = { version = "0.10", features = ["vendored"] }
rand_core = { version = "0.6", features = ["getrandom"] }
regex = "1.10.2"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"
ssh-key = { version = "0.6.2", features = ["ed25519"] }
terminal_size = "0.3.0"
thiserror = "1.0.63"
tokio = { version = "1.33.0", features = ["full"] }
url = "2.5.0"

[dev-dependencies]
