[package]
name = "gnostr-git-helpers"
version = "1878.945703.533663"
edition = "2021"
description = "git-remote helpers for Blossom, Nostr NIP-34, IPFS, PKARR, and Tor"
license = "MIT"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr.git"
keywords = ["git", "nostr", "blossom", "ipfs", "remote-helper"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "git-remote-blossom"
path = "src/bin/git-remote-blossom.rs"

[[bin]]
name = "git-remote-nostr"
path = "src/bin/git-remote-nostr.rs"

[[bin]]
name = "git-remote-ipfs"
path = "src/bin/git-remote-ipfs.rs"

[[bin]]
name = "git-remote-pkarr"
path = "src/bin/git-remote-pkarr.rs"

[[bin]]
name = "git-remote-tor"
path = "src/bin/git-remote-tor.rs"

[dependencies]
anyhow = "1"

# Nostr key handling (NIP-19 bech32)
bech32 = "0.11"
futures-util = "0.3"

# Hex encoding / SHA256
hex = "0.4"

# PKARR DHT resolution (Ed25519 keys → blossom endpoints)
pkarr = { version = "6.0.0-rc.0", default-features = false, features = [
  "relays",
  "signed_packet",
] }
# HTTP client (blocking for sync protocol loop)
# socks: Tor SOCKS5 proxy support
# multipart: IPFS Kubo MFS multipart write API
reqwest = { version = "0.12", features = [
  "blocking",
  "json",
  "multipart",
  "socks",
] }
secp256k1 = { version = "0.29", features = ["rand"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", features = ["std"] }

# Error handling
thiserror = "1"

# Async runtime (used for WebSocket Nostr relay queries + PKARR DHT)
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Logging to stderr (helpers must not pollute stdout)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
