[package]
name = "gnostr-git"
description = "A git client inspired by Magit"
version = "0.10.0"
edition = "2021"
license = "MIT"
workspace = "../"

[[bench]]
name = "show"
harness = false

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.13"
criterion = "0.5.1"
insta = "1.36.1"
git-cliff = "2.2"
cargo-insta = "1.37.0"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.3", features = ["derive"] }
crossterm = "0.27.0"
derive_more = "0.99.17"
directories = "5.0.1"
figment = { version = "0.10.16", features = ["toml"] }
git-version = "0.3.9"
git2 = "^0.18"
itertools = "0.12.0"
log = "0.4.21"
ratatui = { version = "0.26.2", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
similar = { version = "2.5.0", features = ["unicode", "inline"] }
simple-logging = "2.0.2"
toml = "0.8.12"
tui-prompts = "0.3.10"
