[package]
name = "gnostr-git2-hooks"
version.workspace = true
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "adds git hooks support based on git2-rs"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr"
documentation = "https://docs.rs/gnostr/"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["git"]

[dependencies]
git2 = "0.20.1"
log = "0.4"
shellexpand = "3.1"
thiserror = "1.0"

[dev-dependencies]
git2-testing = { package = "gnostr-git2-testing", path = "../git2-testing" }
pretty_assertions = "1.4"
tempfile = "3"
