[package]
name = "gnostr-git2-hooks"
version.workspace = true
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "adds git hooks support based on git2-rs"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr"
documentation = "https://docs.rs/gnostr/"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["git"]

[dependencies]
gitui_git2_hooks = { package = "git2-hooks", path = "../vendor/gitui/git2-hooks", version = ">=0.7.0" }
