[package]
name = "gnostr-git2-testing"
version = "1905.926180.332424"
authors = ["gnostr <admin@gnostr.org>", "extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "convenience functions to write unittests on top of git2-rs"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["git"]

[dependencies]
env_logger = "0.11"
git2 = "0.20.1"
log = "0.4"
tempfile = "3"
