[package]
name = "gnostr-grammar"
description = "tree-sitter grammars built from Helix with support for dynamic linking"
version.workspace = true
edition = "2021"
authors = ["gnostr <admin@gnostr.org>", "Jordan Doyle <jordan@doyle.la>"]
license = "WTFPL"

[dependencies]
globset = "0.4"
regex = "1.11"
tree-sitter-language = "0.1"

[build-dependencies]
anyhow = "1.0"
cc = "1.1"
heck = "0.5"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
syn = "2.0"
threadpool = "1.8"
toml = "0.8"
