[package]
name = "gnostr-invalidstring"
version = "1894.934224.276199"
authors = ["gnostr <admin@gnostr.org>", "extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "just for testing invalid string data"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostgr-org/gnostr"
readme = "README.md"
license = "MIT"
categories = ["development-tools", "development-tools::testing", "encoding"]
keywords = ["string"]

[lib]
name = "gnostr_invalidstring"
path = "src/lib.rs"
