[package]
name = "gnostr-js"
version.workspace = true
edition = "2021"
default-run = "gnostr-js"
authors = ["gnostr <admin@gnostr.org>"]
license = "MIT"
build = "build.rs"

[lib]
name = "gnostr_js"
path = "src/lib.rs"

[[bin]]
name = "gnostr-js"
path = "src/main.rs"

[[bin]]
name = "websockets_chat"
path = "src/bin/websockets_chat.rs"

[[bin]]
name = "embedded_js"
path = "src/bin/embedded_js.rs"

[[bin]]
name = "gnostr-js-relay"
path = "src/bin/gnostr-js-relay.rs"

[[bin]]
name = "flat"
path = "src/bin/flat.rs"

[dependencies]
actix-web = "4"
anyhow = { workspace = true }
clap = { workspace = true }
futures-util = "0.3.31"
handlebars = "6.3.2"
lazy_static = "1.5.0"
log = "0.4"
pretty_env_logger = "0.5.0"
regex = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
libc = { workspace = true }
structopt = "0.3.26"
tempfile = { workspace = true }
tiny_http = "0.12.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
walkdir = { workspace = true }
warp = "0.3"
webbrowser = "0.8"
gnostr-relay = { version = "1876.947517.144602", path = "../relay" }
gnostr-crawler = { version = "1876.947517.144602", path = "../crawler" }

[build-dependencies]
chrono = { workspace = true, features = ["clock"] }
gnostr-asyncgit = { path = "../asyncgit" }
serde_json = "1.0.140"
tokio = { version = "1", features = ["rt-multi-thread"] }
