[package]
name = "gnostr-p2p"
version.workspace = true
edition = "2021"
description = "gnostr p2p crate"
authors = [
    "gnostr <admin@gnostr.org>",
    "0xtr <oxtrr@protonmail.com>",
    "TODO <add_more@gnostr.org>",
]
license = "MIT"
repository = "https://github.com/gnostr-org/gnostr.git"
readme = "README.md"

[lib]
name = "gnostr_p2p"
path = "src/lib.rs"
##doctest = false

[dependencies]
ansi_term = "0.12"
anyhow = { workspace = true }
async-std = { version = "1.12", features = ["attributes"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
gnostr-asyncgit = { workspace = true, default-features = false, features = [
  "nostr",
  "vendor-openssl",
] }
gnostr-crawler = { workspace = true }
gnostr-js = { workspace = true }
libp2p = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
warp = { workspace = true }
