[package]
name = "gnostr_qr"
authors = ["gnostr admin@gnostr.org"]
description = "gnostr_qr: part of the git+nostr workflow utility"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr.git"
version = "0.0.7"
edition = "2021"
license = "MIT"

[package.metadata.wix]
upgrade-guid = "6B5B281A-A1CD-403C-9722-22776599DF63"
path-guid = "112568BC-3A65-41EB-84F4-210F26CBAAEB"
license = false
eula = false

[[bin]]
name = "gnostr-qr"
source = "src/bin/gnostr-qr.rs"
doc = true

[dependencies]
hex = "0.4.3"
image = "0.25.2"
qrcode = "0.14.1"
sha2 = "0.10.8"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
