[package]
name = "gnostr_qr"
authors = ["gnostr admin@gnostr.org"]
description = "gnostr_qr: part of the git+nostr workflow utility"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr.git"
version.workspace = true
edition = "2021"
license = "MIT"

[lib]
name = "gnostr_qr"
path = "src/lib.rs"

[dependencies]
hex = "0.4.3"
image = "0.25.2"
qrcode = "0.14.1"
sha2 = "0.10.8"
