[package]
name = "gnostr-relay"
version = "1878.945843.346028"
edition = "2021"
authors = ["Arron zhang <arronzhang@me.com>", "gnostr <admin@gnostr.org>"]
description = "gnostr:git+nostr protocol relay"
readme = "README.md"
homepage = "https://gnostr.org"
repository = "https://github.com/gnostr-org/gnostr.git"
license = "MIT"
keywords = ["nostr", "nostr-relay", "server", "gnostr", "git"]
categories = ["network-programming", "web-programming"]

[features]
search = ["nostr-relay/search"]

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.75"
clap = { version = "4.5.20", features = ["derive", "env", "cargo"] }
nostr-relay = { version = "0.4.8", default-features = false }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
